<resources>
    <string name="app_name">PokeTrainer</string>
    <string name="trainers">Trainers</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="boulder">Boulder</string>
    <string name="cascade">Cascade</string>
    <string name="soul">Ame</string>
    <string name="cancel">Cancel</string>
    <string name="valid">Valid</string>
    <string name="badges">Badges</string>
    <string name="addTrainer">Add a trainer...</string>
    <string name="pokemons">Pokemons</string>
    <string name="addPokemon">Add a Pokemon...</string>
    <string name="species">Species</string>
    <string name="type1">Type 1</string>
    <string name="type2">(Type 2)</string>
    <string name="regions">Regions</string>
    <string name="addRegion">Add a region...</string>
    <string name="region">Name of region</string>
    <string name="addWildPokemon">Add pokemon</string>
    <string name="numberOfWild">Discovered pokemons :</string>
    <string name="badges_count">Badges count :</string>
    <string name="addOwnPokemon">Add this Pokemon</string>
    <string name="ownPokemons">Trainer\'s Pokemons</string>
    <string name="pokemons_count">Pokemons count :</string>
    <string name="thunder">Thunder</string>
    <string name="rainbow">Rainbow</string>
    <string name="marsh">Marsh</string>
    <string name="volcano">Volcano</string>
    <string name="earth">Earth</string>
    <string name="sort_pokemons">Sort by Pokemon</string>
    <string name="sort_badges">Sort by badges</string>
    <string name="sort_type">Sort by type</string>
    <string name="noName">Please enter a name !</string>
    <string name="noType1">Please enter at least the Primary type !</string>
    <string name="alreadyInList">This Pokemon is already in the region !</string>
    <string name="noAge">Please enter a value !</string>
    <string name="error">An error occured !</string>
</resources>
